<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
        <TextView
            android:id="@+id/text_view_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"/>
        <LinearLayout
            android:id="@+id/photoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/text_view_photo">
            <ImageView
                android:id="@+id/photoEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_weight="2.75"
                android:src="@drawable/profpic"/>
            <Button
                android:id="@+id/changeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:onClick="onChangeClicked"
                android:text="@string/change">
            </Button>
        </LinearLayout>
        <TextView
            android:id="@+id/text_view_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/photoLayout"
            android:layout_marginTop="5dp"/>
        <EditText
            android:id="@+id/nameEntry"
            android:hint="@string/nameHere"
            android:layout_below="@+id/text_view_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/text_view_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/nameEntry"
            android:layout_marginTop="5dp"/>
        <EditText
            android:id="@+id/emailEntry"
            android:hint="@string/emailHere"
            android:layout_below="@+id/text_view_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/text_view_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/emailEntry"
            android:layout_marginTop="5dp"/>
        <EditText
            android:id="@+id/phoneEntry"
            android:hint="@string/phoneHere"
            android:layout_below="@+id/text_view_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/text_view_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/phoneEntry"
            android:layout_marginTop="5dp"/>
        <RadioGroup
            android:id="@+id/genderGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_gender"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <RadioButton
                android:id="@+id/femaleButton"
                android:text="@string/genderFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"/>
            <RadioButton
                android:id="@+id/maleButton"
                android:text="@string/genderMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"/>
        </RadioGroup>
        <TextView
            android:id="@+id/classYear"
            android:text="@string/classYear"
            android:layout_below="@+id/genderGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginTop="5dp"/>
        <EditText
            android:id="@+id/classYearEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/classYearHere"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/classYear"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/text_view_major"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/major"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/classYearEntry"
            android:layout_marginTop="5dp"/>
        <EditText
            android:id="@+id/majorEntry"
            android:hint="@string/majorHere"
            android:layout_below="@+id/text_view_major"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/majorEntry">
            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_weight="1"
                android:onClick="onSaveClicked"
                android:text="@string/save">
            </Button>
            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:onClick="onCancelClicked"
                android:text="@string/cancel">
            </Button>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>